# bettafish-rust

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs  server.rs  single_engine.rs  tests.rs
crates/common/: Cargo.toml
crates/common/src/: forum_reader.rs  lib.rs  retry.rs  text_processing.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/forum-engine/: Cargo.toml
crates/forum-engine/src/: lib.rs
crates/insight-engine/: Cargo.toml
crates/insight-engine/src/: agent.rs  lib.rs
crates/insight-engine/src/nodes/: base.rs  formatting.rs  mod.rs  report_structure.rs  search.rs  summary.rs
crates/insight-engine/src/prompts/: mod.rs
crates/insight-engine/src/state/: mod.rs
crates/insight-engine/src/tools/: db.rs  keyword_optimizer.rs  mod.rs  sentiment.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/media-engine/: Cargo.toml
crates/media-engine/src/: lib.rs
crates/mindspider/: Cargo.toml
crates/mindspider/src/: lib.rs
crates/query-engine/: Cargo.toml
crates/query-engine/src/: agent.rs  lib.rs
crates/query-engine/src/nodes/: base.rs  formatting.rs  mod.rs  report_structure.rs  search.rs  summary.rs
crates/query-engine/src/prompts/: mod.rs
crates/query-engine/src/state/: mod.rs
crates/query-engine/src/tools/: mod.rs
crates/report-engine/: Cargo.toml
crates/report-engine/src/: lib.rs
crates/sentiment-analysis/: Cargo.toml
crates/sentiment-analysis/src/: lib.rs
