[package]
name = "bettafish-query-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
bettafish-config = { path = "../config" }
bettafish-common = { path = "../common" }
bettafish-llm = { path = "../llm" }
